primeira pagina feita

--- a/index.html
+++ b/index.html
@@ -1,14 +1,49 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <script src="abismo.js" defer></script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway+Dots&display=swap" rel="stylesheet"> 
+    <title>Abismo</title>
 </head>
 <body>
-</body>
+    <pre>
+        
+        
+        ▄▀▀█▄       ▄▀▀█▄▄       ▄▀▀█▀▄        ▄▀▀▀▀▄      ▄▀▀▄ ▄▀▄      ▄▀▀▀▀▄  
+        ▐ ▄▀ ▀▄     ▐ ▄▀   █     █   █  █      █ █   ▐     █  █ ▀  █     █      █ 
+          █▄▄▄█       █▄▄▄▀      ▐   █  ▐         ▀▄       ▐  █    █     █      █ 
+         ▄▀   █       █   █          █         ▀▄   █        █    █      ▀▄    ▄▀ 
+        █   ▄▀       ▄▀▄▄▄▀       ▄▀▀▀▀▀▄       █▀▀▀       ▄▀   ▄▀         ▀▀▀▀   
+        ▐   ▐       █    ▐       █       █      ▐          █    █                 
+                    ▐            ▐       ▐                 ▐    ▐           </pre>
+    <div class="escolha-personagens">
+        <div class="personagens">
+            <div title="orc" class="orc">
+            </div>
+            <div title="bite" class="bite">
+            </div>
+            <div title="josefina" class="josefina">
+            </div> 
+        </div>
 
+        <div class="descricao-personagens">
+            <div class="label-orc">balbakbalkablaba</div>
+
+            <div class="label-bite">Bite sempre gostou de estar rodeado de pessoas, quando ficava sozinho ficava triste e procurava por alguém:
+            -Você quer embarcar nessa aventura?</div>
+
+            <div class="label-josefina">Josefina binaria é uma mulher que sempre teve a insegurança consigo no reino onde morava nunca se atreveu a ir por algum
+                caminho que fosse difernte do lhe foi ensinado quando pequena, ela é muito insegura. em um dia josefina recebeu uma tarefa
+                de levar uma encomenda para outro reino e teve de aceitar mas agora esta voltando e teve que desviar seu caminho pois tinham
+                ladinos saqueando os viajantes pelo seu caminho normal. embarcar na aventura de Josefina por um caminho novo onde ele deve
+                enfrentar seu medo do desconhecido? </div>
+        </div>
+    </div>
+</body>
 </html>
