--- a/index.html
+++ b/index.html
@@ -35,14 +35,13 @@
         <div class="descricao-personagens">
             <div class="label-orc">balbakbalkablaba</div>
 
-            <div class="label-bite">Bite sempre gostou de estar rodeado de pessoas, quando ficava sozinho ficava triste e procurava por alguém:
-            -Você quer embarcar nessa aventura?</div>
+            <div class="label-bite">Bite sempre gostou de estar rodeado de pessoas, quando ficava sozinho ficava triste e procurava por alguém:<br>
+            -Você quer embarcar nessa aventura? e ajudar bite a superar isso?</div>
 
-            <div class="label-josefina">Josefina binaria é uma mulher que sempre teve a insegurança consigo no reino onde morava nunca se atreveu a ir por algum
-                caminho que fosse difernte do lhe foi ensinado quando pequena, ela é muito insegura. em um dia josefina recebeu uma tarefa
+            <div class="label-josefina">josefina recebeu uma tarefa
                 de levar uma encomenda para outro reino e teve de aceitar mas agora esta voltando e teve que desviar seu caminho pois tinham
                 ladinos saqueando os viajantes pelo seu caminho normal. embarcar na aventura de Josefina por um caminho novo onde ele deve
-                enfrentar seu medo do desconhecido? </div>
+                enfrentar seu medo do desconhecido?  </div>
         </div>
     </div>
 </body>
