Arrumando os botoes, descrições ainda precisam ser arrumados

--- a/index.html
+++ b/index.html
@@ -33,15 +33,25 @@
         </div>
 
         <div class="descricao-personagens">
-            <div class="label-orc">balbakbalkablaba</div>
+            <div class="label-orc">balbakbalkablaba<br>
+                    <button type="button" class="botao">
+                        <img src="botao.png" alt="selecionar" id="botao">
+                    </button>
+            </div>
 
-            <div class="label-bite">Bite sempre gostou de estar rodeado de pessoas, quando ficava sozinho ficava triste e procurava por alguém:<br>
-            -Você quer embarcar nessa aventura? e ajudar bite a superar isso?</div>
+            <div class="label-bite">Bite sempre gostou de estar rodeado de pessoas, quando ficava sozinho ficava triste e procurava por alguém, seu medo de solidão é imenso:<br>
+            -Você quer embarcar nessa aventura? e ajudar bite a superar isso?<br>
+                <button type="button" class="botao">
+                    <img src="botao.png" alt="selecionar" id="botao">
+                </button>
+            </div>
 
-            <div class="label-josefina">josefina recebeu uma tarefa
-                de levar uma encomenda para outro reino e teve de aceitar mas agora esta voltando e teve que desviar seu caminho pois tinham
-                ladinos saqueando os viajantes pelo seu caminho normal. embarcar na aventura de Josefina por um caminho novo onde ele deve
-                enfrentar seu medo do desconhecido?  </div>
+            <div class="label-josefina">josefina sempre teve medo de lugares onde não conhece, nunca indo muito longe da    onde ela mora, e agora ela tem que fazer uma tarefa para poder sobreviver em um tempo escasso:
+               -Você quer ajudar a Josefina enfrentar seu medo do desconhecido?<br> 
+                    <button type="button" class="botao">
+                        <img src="botao.png" alt="selecionar" id="botao">
+                    </button>
+             </div>
         </div>
     </div>
 </body>
