Primeiro link separado da pagina incial, versao 0.03

--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
+  <head>
     <script src="abismo.js" defer></script>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway+Dots&display=swap" rel="stylesheet"> 
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway+Dots&display=swap"
+      rel="stylesheet"
+    />
     <title>Abismo</title>
-</head>
-<body>
+  </head>
+  <body>
     <pre>
         
         
@@ -21,38 +24,42 @@
          ▄▀   █       █   █          █         ▀▄   █        █    █      ▀▄    ▄▀ 
         █   ▄▀       ▄▀▄▄▄▀       ▄▀▀▀▀▀▄       █▀▀▀       ▄▀   ▄▀         ▀▀▀▀   
         ▐   ▐       █    ▐       █       █      ▐          █    █                 
-                    ▐            ▐       ▐                 ▐    ▐           </pre>
+                    ▐            ▐       ▐                 ▐    ▐           </pre
+    >
     <div class="escolha-personagens">
-        <div class="personagens">
-            <div title="orc" class="orc">
-            </div>
-            <div title="bite" class="bite">
-            </div>
-            <div title="josefina" class="josefina">
-            </div> 
+      <div class="personagens">
+        <div title="orc" class="orc"></div>
+        <div title="bite" class="bite"></div>
+        <div title="josefina" class="josefina"></div>
+      </div>
+
+      <div class="descricao-personagens">
+        <div class="label-orc">
+          balbakbalkablaba<br />
+          <button type="button" class="botao">
+            <img src="botao.png" alt="selecionar" class="imagem" />
+          </button>
         </div>
 
-        <div class="descricao-personagens">
-            <div class="label-orc">balbakbalkablaba<br>
-                    <button type="button" class="botao">
-                        <img src="botao.png" alt="selecionar" id="botao">
-                    </button>
-            </div>
-
-            <div class="label-bite">Bite sempre gostou de estar rodeado de pessoas, quando ficava sozinho ficava triste e procurava por alguém, seu medo de solidão é imenso:<br>
-            -Você quer embarcar nessa aventura? e ajudar bite a superar isso?<br>
-                <button type="button" class="botao">
-                    <img src="botao.png" alt="selecionar" id="botao">
-                </button>
-            </div>
-
-            <div class="label-josefina">josefina sempre teve medo de lugares onde não conhece, nunca indo muito longe da    onde ela mora, e agora ela tem que fazer uma tarefa para poder sobreviver em um tempo escasso:
-               -Você quer ajudar a Josefina enfrentar seu medo do desconhecido?<br> 
-                    <button type="button" class="botao">
-                        <img src="botao.png" alt="selecionar" id="botao">
-                    </button>
-             </div>
+        <div class="label-bite">
+          <p> Bite sempre gostou de estar rodeado de pessoas, quando ficava sozinho
+          ficava triste e procurava por alguém, seu medo de solidão é imenso:
+          -Você quer embarcar nessa aventura? e ajudar bite a superar isso?</p>
+          <a href="./historia-personagens/bite/fase1.html" class="botao">
+            <img src="botao.png" alt="selecionar" class="imagem" />
+          </a>
         </div>
+
+        <div class="label-josefina">
+          josefina sempre teve medo de lugares onde não conhece, nunca indo
+          muito longe da onde ela mora, e agora ela tem que fazer uma tarefa
+          para poder sobreviver em um tempo escasso: <br />
+          -Você quer ajudar a Josefina enfrentar seu medo do desconhecido?<br />
+          <button type="button" class="botao">
+            <img src="botao.png" alt="selecionar" class="imagem" />
+          </button>
+        </div>
+      </div>
     </div>
-</body>
+  </body>
 </html>
