Historia bite montada, possiveis mudanças no futuro

--- a/historia-personagens/bite/fase3.html
+++ b/historia-personagens/bite/fase3.html
@@ -11,23 +11,24 @@
       href="https://fonts.googleapis.com/css2?family=Raleway+Dots&display=swap"
       rel="stylesheet"
     />
-    <title>Fase-1-Bite</title>
+    <title>Fase-3-Bite</title>
     <script src="../../js/abismo.js" defer></script>
   </head>
   <body>
     <div class="fundo">
       <div class="fase-bite">
-        <img src="../../Cenarios/bite-1.png" alt="" />
+        <img src="../../Cenarios/bite-3.png" alt="" />
       </div>
       <div class="dialogo">
         <p>
-          Um dia, Bite teve que ficar em casa, pois quando sua mulher saiu e ele
-          tinha que cuidar da casa e, assim, tendo que enfrentar seu maior medo
-          de ficar sozinho. Ficar e cuidar da casa??
+          Bite decide entao enfrenter seu medo da solidão e pega um livro para
+          ler, assim se tornando cada vez mais confiante, vivendo cada dia
+          melhor consigo mesmo. É importante enfrentarmos o medo da solidão pois
+          nos torma mais fortes e confiantes.
         </p>
       </div>
       <div class="bite-botao">
-        <button type="button" class="botao" onclick="escolha_bite1();">
+        <button type="button" class="botao" onclick="escolha_bite3();">
           <img src="../../selecionar.png" class="imagem" alt="" />
         </button>
       </div>
