--- a/historia-personagens/bite/game_over.html
+++ b/historia-personagens/bite/game_over.html
@@ -11,23 +11,26 @@
       href="https://fonts.googleapis.com/css2?family=Raleway+Dots&display=swap"
       rel="stylesheet"
     />
-    <title>Fase-1-Bite</title>
+    <title>Gme-over-bite</title>
     <script src="../../js/abismo.js" defer></script>
   </head>
   <body>
     <div class="fundo">
       <div class="fase-bite">
-        <img src="../../Cenarios/bite-1.png" alt="" />
+        <img src="../../Cenarios/bite-4.png" alt="" />
       </div>
       <div class="dialogo">
         <p>
-          Um dia, Bite teve que ficar em casa, pois quando sua mulher saiu e ele
-          tinha que cuidar da casa e, assim, tendo que enfrentar seu maior medo
-          de ficar sozinho. Ficar e cuidar da casa??
+          Bite decidiu não ficar sozinho, pois seu medo fez com que o livro e a
+          estante ficassem amentrontadores demais, fazendo com que ele fosse
+          atrás de sua mulher, tornando-o dependente a vida toda de outras
+          pessoas, ficando triste por não tentar seguir sozinho e descobrir
+          coisas por sí próprio. Quer tentar diferente e ajudar Bite a enfrentar
+          seu medo para dar mais esperança a ele??
         </p>
       </div>
       <div class="bite-botao">
-        <button type="button" class="botao" onclick="escolha_bite1();">
+        <button type="button" class="botao" onclick="escolha_bite();">
           <img src="../../selecionar.png" class="imagem" alt="" />
         </button>
       </div>
