--- a/historia-personagens/bite/fase2.html
+++ b/historia-personagens/bite/fase2.html
@@ -11,23 +11,24 @@
       href="https://fonts.googleapis.com/css2?family=Raleway+Dots&display=swap"
       rel="stylesheet"
     />
-    <title>Fase-1-Bite</title>
+    <title>Fase-2-Bite</title>
     <script src="../../js/abismo.js" defer></script>
   </head>
   <body>
     <div class="fundo">
       <div class="fase-bite">
-        <img src="../../Cenarios/bite-1.png" alt="" />
+        <img src="../../Cenarios/bite-2.png" alt="" />
       </div>
       <div class="dialogo">
         <p>
-          Um dia, Bite teve que ficar em casa, pois quando sua mulher saiu e ele
-          tinha que cuidar da casa e, assim, tendo que enfrentar seu maior medo
-          de ficar sozinho. Ficar e cuidar da casa??
+          Bite olha uma estante de livros quando sozinho em sua casa,o seu medo
+          aparece, e ele se depara com a estante de livros que começa a tomar
+          uma forma assustadora em sua mente. O seu medo de ficar sozinho toma
+          conta de seu corpo todo, então Bite tem uma decisão:
         </p>
       </div>
       <div class="bite-botao">
-        <button type="button" class="botao" onclick="escolha_bite1();">
+        <button type="button" class="botao" onclick="escolha_bite2();">
           <img src="../../selecionar.png" class="imagem" alt="" />
         </button>
       </div>
