imagem de game-over-Bite modificada 0.06

--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
         </div>
 
         <div class="label-josefina">
-          josefina sempre teve medo de lugares onde não conhece, nunca indo
+          <p>josefina sempre teve medo de lugares onde não conhece, nunca indo
           muito longe da onde ela mora, e agora ela tem que fazer uma tarefa
           para poder sobreviver em um tempo escasso: <br />
-          -Você quer ajudar a Josefina enfrentar seu medo do desconhecido?<br />
+          -Você quer ajudar a Josefina enfrentar seu medo do desconhecido?</p>
           <button type="button" class="botao">
             <img src="botao.png" alt="selecionar" class="imagem" />
           </button>
