Fases da Josefina, 0,07

--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
           muito longe da onde ela mora, e agora ela tem que fazer uma tarefa
           para poder sobreviver em um tempo escasso: <br />
           -Você quer ajudar a Josefina enfrentar seu medo do desconhecido?</p>
-          <button type="button" class="botao">
+          <a href="./historia-personagens/josefina/fase1.html" class="botao">
             <img src="botao.png" alt="selecionar" class="imagem" />
-          </button>
+          </a>
         </div>
       </div>
     </div>
