Termino das fases dos personagens 0.08

--- a/historia-personagens/orc/fase2.html
+++ b/historia-personagens/orc/fase2.html
@@ -11,26 +11,26 @@
       href="https://fonts.googleapis.com/css2?family=Raleway+Dots&display=swap"
       rel="stylesheet"
     />
-    <title>Fase-1-Josefina</title>
+    <title>Fase-2-ORC</title>
     <script src="../../js/abismo.js" defer></script>
   </head>
   <body>
     <div class="fundo">
       <div class="fase-bite">
-        <img src="../../Cenarios/josefina-1.png" alt="" />
+        <img src="../../Cenarios/ocr-2.png" alt="" />
       </div>
       <div class="dialogo">
         <p>
-          josefina recebeu uma tarefa de levar uma encomenda para outro reino e
-          teve de aceitar agora esta voltando e teve que desviar seu caminho
-          pois tinham ladinos saqueando os viajantes pelo seu caminho normal.
-          Josefina esta em uma estrada onde nunca esteve antes, com algumas
-          moradias dos lados o caminho parece ser longo, e sua insegurança
-          começa a aumentar, continuar nessa estrada?
+          Morse então resolve ir até o fim dessa ponte e chegar mais perto da
+          porta, quando ele olha realmente para a porta ve que ela tem uma
+          aparencia de velha e pesada mas se ele forçar ele consegue abri-la,
+          mas sua aparencia tira a sua coragem de empurrada, ele ja esta suando
+          frio por causa de seu medo do desconhecido. mas pensa se a empurra ou
+          não.
         </p>
       </div>
       <div class="bite-botao">
-        <button type="button" class="botao" onclick="escolha_josefina1();">
+        <button type="button" class="botao" onclick="escolha_orc2();">
           <img src="../../selecionar.png" class="imagem" alt="" />
         </button>
       </div>
