--- a/historia-personagens/orc/fase3.html
+++ b/historia-personagens/orc/fase3.html
@@ -11,26 +11,24 @@
       href="https://fonts.googleapis.com/css2?family=Raleway+Dots&display=swap"
       rel="stylesheet"
     />
-    <title>Fase-1-Josefina</title>
+    <title>Fase-3-ORC</title>
     <script src="../../js/abismo.js" defer></script>
   </head>
   <body>
     <div class="fundo">
       <div class="fase-bite">
-        <img src="../../Cenarios/josefina-1.png" alt="" />
+        <img src="../../Cenarios/orc-3.png" alt="" />
       </div>
       <div class="dialogo">
         <p>
-          josefina recebeu uma tarefa de levar uma encomenda para outro reino e
-          teve de aceitar agora esta voltando e teve que desviar seu caminho
-          pois tinham ladinos saqueando os viajantes pelo seu caminho normal.
-          Josefina esta em uma estrada onde nunca esteve antes, com algumas
-          moradias dos lados o caminho parece ser longo, e sua insegurança
-          começa a aumentar, continuar nessa estrada?
+          Então Morse empurra a porta e ve a sala totalmente escura, nesse ponto
+          seu medo do que não pode ser visto já é imenso e toma conta de quase
+          toda sua mente, mas Morse pensa que se chegou até aqui deve continuar
+          mesmo quase entrando em paralisia por não enxergar nada a sua frente.
         </p>
       </div>
       <div class="bite-botao">
-        <button type="button" class="botao" onclick="escolha_josefina1();">
+        <button type="button" class="botao" onclick="escolha_orc3();">
           <img src="../../selecionar.png" class="imagem" alt="" />
         </button>
       </div>
