--- a/index.html
+++ b/index.html
@@ -35,26 +35,35 @@
 
       <div class="descricao-personagens">
         <div class="label-orc">
-          balbakbalkablaba<br />
-          <button type="button" class="botao">
+          <p>
+            Morse sempre foi um orc com muito medo do inserto, do que não lhe
+            parecia seguro ou conhecido do inserto.
+            -Quer ajudar o Orc Morse a superar esse medo?
+          </p>
+          <a href="./historia-personagens/orc/fase1.html" class="botao">
             <img src="botao.png" alt="selecionar" class="imagem" />
-          </button>
+          </a>
         </div>
 
         <div class="label-bite">
-          <p> Bite sempre gostou de estar rodeado de pessoas, quando ficava sozinho
-          ficava triste e procurava por alguém, seu medo de solidão é imenso:
-          -Você quer embarcar nessa aventura? e ajudar bite a superar isso?</p>
+          <p>
+            Bite sempre gostou de estar rodeado de pessoas, quando ficava
+            sozinho ficava triste e procurava por alguém, seu medo de solidão é
+            imenso: -Você quer embarcar nessa aventura? e ajudar bite a superar
+            isso?
+          </p>
           <a href="./historia-personagens/bite/fase1.html" class="botao">
             <img src="botao.png" alt="selecionar" class="imagem" />
           </a>
         </div>
 
         <div class="label-josefina">
-          <p>josefina sempre teve medo de lugares onde não conhece, nunca indo
-          muito longe da onde ela mora, e agora ela tem que fazer uma tarefa
-          para poder sobreviver em um tempo escasso: <br />
-          -Você quer ajudar a Josefina enfrentar seu medo do desconhecido?</p>
+          <p>
+            josefina sempre teve medo de lugares onde não conhece, nunca indo
+            muito longe da onde ela mora, e agora ela tem que fazer uma tarefa
+            para poder sobreviver em um tempo escasso: <br />
+            -Você quer ajudar a Josefina enfrentar seu medo do desconhecido?
+          </p>
           <a href="./historia-personagens/josefina/fase1.html" class="botao">
             <img src="botao.png" alt="selecionar" class="imagem" />
           </a>
