--- a/historia-personagens/orc/fase1.html
+++ b/historia-personagens/orc/fase1.html
@@ -17,20 +17,19 @@
   <body>
     <div class="fundo">
       <div class="fase-bite">
-        <img src="../../Cenarios/josefina-1.png" alt="" />
+        <img src="../../Cenarios/orc-1.png" alt="" />
       </div>
       <div class="dialogo">
         <p>
-          josefina recebeu uma tarefa de levar uma encomenda para outro reino e
-          teve de aceitar agora esta voltando e teve que desviar seu caminho
-          pois tinham ladinos saqueando os viajantes pelo seu caminho normal.
-          Josefina esta em uma estrada onde nunca esteve antes, com algumas
-          moradias dos lados o caminho parece ser longo, e sua insegurança
-          começa a aumentar, continuar nessa estrada?
+          Um dia Morse recebeu a tarefa de sair da sua vila para buscar superar
+          seu medo com o inserto o desconhecido com que fazia ele não pudesse
+          evoluir e se tornar um guerreiro, ele partiu na sua jornada, depois de
+          um tempo numa certa noite ele encontra uma ponte longa e com aparencia
+          sombria, então o medo do inserto começa a aparecer.
         </p>
       </div>
       <div class="bite-botao">
-        <button type="button" class="botao" onclick="escolha_josefina1();">
+        <button type="button" class="botao" onclick="escolha_orc1();">
           <img src="../../selecionar.png" class="imagem" alt="" />
         </button>
       </div>
