--- a/historia-personagens/orc/fase4.html
+++ b/historia-personagens/orc/fase4.html
@@ -11,26 +11,26 @@
       href="https://fonts.googleapis.com/css2?family=Raleway+Dots&display=swap"
       rel="stylesheet"
     />
-    <title>Fase-1-Josefina</title>
+    <title>Fase-4-ORC</title>
     <script src="../../js/abismo.js" defer></script>
   </head>
   <body>
     <div class="fundo">
       <div class="fase-bite">
-        <img src="../../Cenarios/josefina-1.png" alt="" />
+        <img src="../../Cenarios/orc-4.png" alt="" />
       </div>
       <div class="dialogo">
         <p>
-          josefina recebeu uma tarefa de levar uma encomenda para outro reino e
-          teve de aceitar agora esta voltando e teve que desviar seu caminho
-          pois tinham ladinos saqueando os viajantes pelo seu caminho normal.
-          Josefina esta em uma estrada onde nunca esteve antes, com algumas
-          moradias dos lados o caminho parece ser longo, e sua insegurança
-          começa a aumentar, continuar nessa estrada?
+          Morse se ve totalmente no breu no escuro completo, nessa hora sua
+          mente começa a pregar peças com ele seu corpo perde um pouco da
+          mobilidade suas mãos tremem seus olhos forçam tanto para poder ver
+          algo que quase são esmagados pela suas palpebras, a unica coisa que
+          Morse tem neste momento são as paredes asperas e um pequeno ponto luz
+          ao final dessa sala imensa de breu.
         </p>
       </div>
       <div class="bite-botao">
-        <button type="button" class="botao" onclick="escolha_josefina1();">
+        <button type="button" class="botao" onclick="escolha_orc4();">
           <img src="../../selecionar.png" class="imagem" alt="" />
         </button>
       </div>
