--- a/historia-personagens/orc/fase5.html
+++ b/historia-personagens/orc/fase5.html
@@ -11,26 +11,28 @@
       href="https://fonts.googleapis.com/css2?family=Raleway+Dots&display=swap"
       rel="stylesheet"
     />
-    <title>Fase-1-Josefina</title>
+    <title>Fase-5-ORC</title>
     <script src="../../js/abismo.js" defer></script>
   </head>
   <body>
     <div class="fundo">
       <div class="fase-bite">
-        <img src="../../Cenarios/josefina-1.png" alt="" />
+        <img src="../../Cenarios/orc-5.png" alt="" />
       </div>
       <div class="dialogo">
         <p>
-          josefina recebeu uma tarefa de levar uma encomenda para outro reino e
-          teve de aceitar agora esta voltando e teve que desviar seu caminho
-          pois tinham ladinos saqueando os viajantes pelo seu caminho normal.
-          Josefina esta em uma estrada onde nunca esteve antes, com algumas
-          moradias dos lados o caminho parece ser longo, e sua insegurança
-          começa a aumentar, continuar nessa estrada?
+          Morse tenta manter a respiração controlada e vai com auxilio das
+          paredes caminhando até o ponto de luz, e descobre que é um buraco de
+          uma fechadura então ele resolve abrir e se depara com um lindo jardim
+          com um lago que reflete a linda do luar fazendo com que todo o esforço
+          que Morse teve para enfrentar o medo do desconhecido valesse a pena no
+          final, ele percebeu que enfrentar seus medos é ruim e doi mas no final
+          a reconpensa é grande agora ele pode voltar a sua vila e se tornar o
+          grande guerreiro que ele gostaria de ser, desbravando mais terras.
         </p>
       </div>
       <div class="bite-botao">
-        <button type="button" class="botao" onclick="escolha_josefina1();">
+        <button type="button" class="botao" onclick="escolha_orc5();">
           <img src="../../selecionar.png" class="imagem" alt="" />
         </button>
       </div>
