--- a/historia-personagens/orc/game-over.html
+++ b/historia-personagens/orc/game-over.html
@@ -11,26 +11,27 @@
       href="https://fonts.googleapis.com/css2?family=Raleway+Dots&display=swap"
       rel="stylesheet"
     />
-    <title>Fase-1-Josefina</title>
+    <title>Fase-Game-over-ORC</title>
     <script src="../../js/abismo.js" defer></script>
   </head>
   <body>
     <div class="fundo">
       <div class="fase-bite">
-        <img src="../../Cenarios/josefina-1.png" alt="" />
+        <img src="../../Cenarios/orc-game-over.png" alt="" />
       </div>
       <div class="dialogo">
         <p>
-          josefina recebeu uma tarefa de levar uma encomenda para outro reino e
-          teve de aceitar agora esta voltando e teve que desviar seu caminho
-          pois tinham ladinos saqueando os viajantes pelo seu caminho normal.
-          Josefina esta em uma estrada onde nunca esteve antes, com algumas
-          moradias dos lados o caminho parece ser longo, e sua insegurança
-          começa a aumentar, continuar nessa estrada?
+          Morse desiste e vira para tras para ir embora pois seu medo é muito
+          grande mas quando ele ve uma grande massa negra o engole e leva para
+          um abismo sem fim dentro de sua mente, fazendo com que ele volte para
+          sua vila e viva uma vida completamente sem aventuras mais clara
+          possivel, seu sonho de se tornar um guerrreiro e desbravar terras
+          desconhecidas nunca acontece e ele morre sem conseguir superar seu
+          medo.
         </p>
       </div>
       <div class="bite-botao">
-        <button type="button" class="botao" onclick="escolha_josefina1();">
+        <button type="button" class="botao" onclick="escolha_orc6();">
           <img src="../../selecionar.png" class="imagem" alt="" />
         </button>
       </div>
