--- a/historia-personagens/josefina/fase2.html
+++ b/historia-personagens/josefina/fase2.html
@@ -28,7 +28,7 @@
       </div>
       <div class="bite-botao">
         <button type="button" class="botao" onclick="escolha_josefina2();">
-          <img src="../../selecionar.png" class="imagem" alt="" />
+          <img src="../../../botoes/selecionar.png" class="imagem" alt="" />
         </button>
       </div>
     </div>
