--- a/historia-personagens/orc/fase3.html
+++ b/historia-personagens/orc/fase3.html
@@ -29,7 +29,7 @@
       </div>
       <div class="bite-botao">
         <button type="button" class="botao" onclick="escolha_orc3();">
-          <img src="../../selecionar.png" class="imagem" alt="" />
+          <img src="../../../botoes/selecionar.png" class="imagem" alt="" />
         </button>
       </div>
     </div>
