--- a/historia-personagens/orc/game-over.html
+++ b/historia-personagens/orc/game-over.html
@@ -32,7 +32,7 @@
       </div>
       <div class="bite-botao">
         <button type="button" class="botao" onclick="escolha_orc6();">
-          <img src="../../selecionar.png" class="imagem" alt="" />
+          <img src="../../../botoes/selecionar.png" class="imagem" alt="" />
         </button>
       </div>
     </div>
