--- a/historia-personagens/bite/game_over.html
+++ b/historia-personagens/bite/game_over.html
@@ -31,7 +31,7 @@
       </div>
       <div class="bite-botao">
         <button type="button" class="botao" onclick="escolha_bite();">
-          <img src="../../../botoes/selecionar.png" class="imagem" alt="" />
+          <img src="../../botoes/selecionar.png" class="imagem" alt="" />
         </button>
       </div>
     </div>
