--- a/historia-personagens/orc/fase1.html
+++ b/historia-personagens/orc/fase1.html
@@ -30,7 +30,7 @@
       </div>
       <div class="bite-botao">
         <button type="button" class="botao" onclick="escolha_orc1();">
-          <img src="../../../botoes/selecionar.png" class="imagem" alt="" />
+          <img src="../../botoes/selecionar.png" class="imagem" alt="" />
         </button>
       </div>
     </div>
