pagina de creditos 1.1

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>Abismo</title>
   </head>
   <body>
-    <pre>
+   <a href="./creditos/cretidos.html"> <pre>
         
         
         ▄▀▀█▄       ▄▀▀█▄▄       ▄▀▀█▀▄        ▄▀▀▀▀▄      ▄▀▀▄ ▄▀▄      ▄▀▀▀▀▄  
@@ -25,7 +25,7 @@
         █   ▄▀       ▄▀▄▄▄▀       ▄▀▀▀▀▀▄       █▀▀▀       ▄▀   ▄▀         ▀▀▀▀   
         ▐   ▐       █    ▐       █       █      ▐          █    █                 
                     ▐            ▐       ▐                 ▐    ▐           </pre
-    >
+    ></a>
     <div class="escolha-personagens">
       <div class="personagens">
         <div title="orc" class="orc"></div>
