--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             -Quer ajudar o Orc Morse a superar esse medo?
           </p>
           <a href="./historia-personagens/orc/fase1.html" class="botao">
-            <img src="../botoes/botao.png" alt="selecionar" class="imagem" />
+            <img src="./botoes/botao.png" alt="selecionar" class="imagem" />
           </a>
         </div>
 
@@ -53,7 +53,7 @@
             isso?
           </p>
           <a href="./historia-personagens/bite/fase1.html" class="botao">
-            <img src="../botoes/botao.png" alt="selecionar" class="imagem" />
+            <img src="./botoes/botao.png" alt="selecionar" class="imagem" />
           </a>
         </div>
 
