caminhos AGORA VAI 1.03

--- a/historia-personagens/josefina/game-over.html
+++ b/historia-personagens/josefina/game-over.html
@@ -31,7 +31,7 @@
       </div>
       <div class="bite-botao">
         <button type="button" class="botao" onclick="escolha_josefina_game_over();">
-          <img src="../../botoes/selecionar.png" class="imagem" alt="" />
+          <img src="../../Botoes/selecionar.png" class="imagem" alt="" />
         </button>
       </div>
     </div>
