--- a/historia-personagens/orc/fase5.html
+++ b/historia-personagens/orc/fase5.html
@@ -33,7 +33,7 @@
       </div>
       <div class="bite-botao">
         <button type="button" class="botao" onclick="escolha_orc5();">
-          <img src="../../botoes/selecionar.png" class="imagem" alt="" />
+          <img src="../../Botoes/selecionar.png" class="imagem" alt="" />
         </button>
       </div>
     </div>
