--- a/creditos/cretidos.html
+++ b/creditos/cretidos.html
@@ -17,11 +17,11 @@
     <div class="creditos">
       <p class="creditos-texto">
         Queria começar agradecendo a Resilia Educação pela oportunidade
-        concebida, agradecer também a Karlla pelas monitorias sempre muito bem
+        concebida, agradecer também a Karlla e Matheus pelas monitorias sempre muito bem
         explicadas, o Gabriel izoton pelas aulas maravilhosas, ao William
         brandley por me ajudar a me organizar e também organizar os sentimentos
         dentro de mim. Queria agradecer ao William meu grande amigo por sempre
-        estar comigo no discord e o Renan, sempre dispostos a me ajudar quando
+        estar comigo no discord, Renan, Daniel Fujita, sempre dispostos a me ajudar quando
         eu estava perdido (e não foram poucas vezes até aqui rsrs). Esse game
         por mais breve que seja, tentei expressar os medos e os sentimentos que
         eu tinha/tenho dentro da minha mente e que tento enfrenta-los todos os
